third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/explicit_span_range.stderr
error: explicit SpanRange
 --> tests/ui/explicit_span_range.rs:3:22
  |
3 | explicit_span_range!(one, two, three, four);
  |                      ^^^^^^^^^^^^^^^
