third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/explicit_span_range.rs
use test_crate::*;

explicit_span_range!(one, two, three, four);

fn main() {}
